# rec-engine

./: README.md  api.py  app.py  build_knowledge_base.py  evaluation_results.csv  groundTruth.xlsx  main.py  parse_recs.py  pyproject.toml  render.yaml  scraping_utils.py  sys2.md  system_prompt.md  test.csv  test.py
crawling/: crawl.py
data/: shl-docs.md  tuning_prompts.csv
faiss_index/: default__vector_store.json  docstore.json  index_store.json
